Edit profile + Added ignore to nodemonConfig for client

--- a/package.json
+++ b/package.json
@@ -24,5 +24,11 @@
   "devDependencies": {
     "concurrently": "^5.0.0",
     "nodemon": "^2.0.1"
+  },
+  "nodemonConfig": {
+    "ignore": [
+      "client/*"
+    ],
+    "delay": "2500"
   }
 }
